--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,7 +1,25 @@
 name: Parker tester
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
 jobs:
+  build:
+    name: Run commands to start the node server
+    uses: appleboy/ssh-action@v0.1.9
+    with:
+      host: ec2-3-16-37-51.us-east-2.compute.amazonaws.com
+      username: ec2-user
+      port: 22
+      script: |
+        nohup npm start &
+        sudo iptables -t nat -I PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 3000
+        sudo iptables -I INPUT -p tcp --dport 8080 -j ACCEPT
+
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
